# fastapi_modular_backend

./: .dockerignore  LICENSE  READMD.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  test-push-delete-soon.txt
docker/app/: Dockerfile  entrypoint.sh
docs/: API 層架構設計.md  API 統一回應格式說明.md  Clean Architecture 同心圓架構詳解.md  Domain 層組織問題分析.md  Domain 層組織規範.md  Domain 層規劃總結.md  Domain 層遷移指南.md  Repository 層轉換模式說明.md  WebSocket 架構方案分析.md  Wiring 模組-自動化依賴注入.md  依賴注入流程詳解.md  多 API 創建問題分析與解決方案.md  性能分析-對象創建與 GC 壓力.md  新增功能指南-User CRUD-01-基礎架構.md  新增功能指南-User CRUD-02-Create.md  新增功能指南-User CRUD-03-Retrieve.md  新增功能指南-User CRUD-04-Update.md  新增功能指南-User CRUD-05-Delete.md  架構說明.md  測試流程說明.md  連接池管理詳解-FastAPI與SQLAlchemy.md  重複代碼問題分析.md  錯誤處理架構說明.md
scripts/: dev-down.sh  dev-up.sh  run-tests.sh  run_migrations.py  test-integration.sh  test.sh  wait_for_migrations.py
src/app/: config.py  repo_base
src/app/api/: carts.py  deps.py  exception_handlers.py  factory.py  http_app.py  router_discovery.py
src/app/api/exceptions/: __init__.py  cart.py  common.py  order.py
src/app/api/routers/: __init__.py  carts.py
src/app/api/schemas/: __init__.py  (+2 more)
src/app/application/: __init__.py  app.py
src/app/worker/: celery_app.py  scheduler.py  tasks.py
tests/: conftest.py  test_base_repository_pagination.py  test_exception_handlers.py  test_router_discovery.py
tests/features/api/: cart_api.feature
tests/features/cart/: add_item.feature  get_cart.feature
tests/step_defs/: cart_api_steps.py  cart_service_steps.py  conftest.py
tests/support/: context.py
tests/support/fakes/: fake_cart_repository.py
(+41 files in other folders)
