 [project]
 name = "cart-service"
 version = "0.1.0"
 requires-python = ">=3.11"
dependencies = [
    "dependency-injector>=4.41,<5",
    "fastapi",
     "uvicorn[standard]",
     "pydantic>=2.0",
     "pydantic-settings>=2.0",
     "sqlalchemy>=2.0",
     "psycopg[binary]",              # PostgreSQL driver
     "alembic",
     "redis>=5.0.0",                 # cache & Celery broker backend (選用)
     "celery>=5.3",
     "celery-sqlalchemy-scheduler",  # DB-based beat scheduler
     "flower>=2.0",
 ]

 [project.optional-dependencies]
 dev = [
     "pytest",
     "pytest-asyncio",
     "pytest-bdd",
     "allure-pytest",
     "pytest-cov",
     "httpx",
     "black",
     "ruff",
     "isort",
     "mypy",
 ]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = ["test_*.py", "*_steps.py"]
bdd_features_base_dir = "tests/features/"

